examples/datalog/14_aggregations/30_empty_group.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_empty_group
Knowledge graph 'test_empty_group' created.
Switched to knowledge graph: test_empty_group
> .kg use test_empty_group
Switched to knowledge graph: test_empty_group
> +sales[("North", 100), ("North", 150), ("South", 200)].
Inserted 3 fact(s) into 'sales'.
> +region_sum(Region, <SUM:Amt>) :- sales(Region, Amt).
Script error: Parse error: Invalid term: '<SUM:Amt>'
